--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # Unity project located in pro-game/
 # Cache/build folders (must not be tracked)
- /pro-game/[Ll]ibrary/
- /pro-game/[Tt]emp/
- /pro-game/[Oo]bj/
- /pro-game/[Bb]uild/
- /pro-game/[Bb]uilds/
- /pro-game/[Ll]ogs/
- /pro-game/[Uu]ser[Ss]ettings/
- /pro-game/[Mm]emoryCaptures/
- /pro-game/[Rr]ecordings/
+pro-game/[Ll]ibrary/
+pro-game/[Tt]emp/
+pro-game/[Oo]bj/
+pro-game/[Bb]uild/
+pro-game/[Bb]uilds/
+pro-game/[Ll]ogs/
+pro-game/[Uu]ser[Ss]ettings/
+pro-game/[Mm]emoryCaptures/
+pro-game/[Rr]ecordings/
 
 # Logs
 *.log
@@ -18,7 +18,7 @@
 *.blend1.meta
 
 # JetBrains & VS
-/pro-game/[Aa]ssets/Plugins/Editor/JetBrains*
+pro-game/[Aa]ssets/Plugins/Editor/JetBrains*
 *.DotSettings.user
 .vs/
 .gradle/
@@ -59,20 +59,20 @@ mono_crash.*
 crashlytics-build.properties
 
 # TestRunner
-/pro-game/InitTestScene*.unity*
+pro-game/InitTestScene*.unity*
 
 # Addressables
-/pro-game/ServerData
-/pro-game/[Aa]ssets/StreamingAssets/aa*
-/pro-game/[Aa]ssets/AddressableAssetsData/link.xml*
-/pro-game/[Aa]ssets/Addressables_Temp*
-/pro-game/[Aa]ssets/AddressableAssetsData/*/*.bin*
+pro-game/ServerData/
+pro-game/[Aa]ssets/StreamingAssets/aa*
+pro-game/[Aa]ssets/AddressableAssetsData/link.xml*
+pro-game/[Aa]ssets/Addressables_Temp*
+pro-game/[Aa]ssets/AddressableAssetsData/*/*.bin*
 
 # Visual Scripting generated
-/pro-game/[Aa]ssets/Unity.VisualScripting.Generated/VisualScripting.Flow/UnitOptions.db
-/pro-game/[Aa]ssets/Unity.VisualScripting.Generated/VisualScripting.Flow/UnitOptions.db.meta
-/pro-game/[Aa]ssets/Unity.VisualScripting.Generated/VisualScripting.Core/Property Providers
-/pro-game/[Aa]ssets/Unity.VisualScripting.Generated/VisualScripting.Core/Property Providers.meta
+pro-game/[Aa]ssets/Unity.VisualScripting.Generated/VisualScripting.Flow/UnitOptions.db
+pro-game/[Aa]ssets/Unity.VisualScripting.Generated/VisualScripting.Flow/UnitOptions.db.meta
+pro-game/[Aa]ssets/Unity.VisualScripting.Generated/VisualScripting.Core/Property Providers/
+pro-game/[Aa]ssets/Unity.VisualScripting.Generated/VisualScripting.Core/Property Providers.meta
 
 # Auto-generated scenes by play mode tests
-/pro-game/[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+pro-game/[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
